<resources>
    <string name="app_name">TicTacToe Online</string>
    <string name="hint_password">Password</string>
    <string name="hint_email_address">Email Address</string>
    <string name="login">Login</string>

    <!-- Temp String Resource -->
    <string name="find_game_temp">Find Game</string>
    <string name="login_attempt_message">Attempting to log you in…</string>
    <string name="logout_temp">Logout</string>
    <string name="status_temp">Status:</string>
</resources>